--- a/package.json
+++ b/package.json
@@ -5,34 +5,35 @@
   "version": "0.1.0",
   "author": "Robert Winterstein <rrwinterstein@gmail.com>",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-brands-svg-icons": "^5.12.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.18.15",
-    "gatsby-cli": "^2.8.20",
-    "gatsby-image": "^2.2.37",
-    "gatsby-plugin-google-analytics": "^2.1.31",
-    "gatsby-plugin-manifest": "^2.2.33",
-    "gatsby-plugin-offline": "^2.2.10",
-    "gatsby-plugin-react-helmet": "^3.1.18",
-    "gatsby-plugin-sass": "^2.1.26",
-    "gatsby-plugin-sharp": "^2.3.9",
-    "gatsby-plugin-styled-components": "^3.1.16",
-    "gatsby-source-filesystem": "^2.1.42",
-    "gatsby-transformer-sharp": "^2.3.9",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "babel-plugin-styled-components": "^1.10.7",
+    "gatsby": "^2.20.24",
+    "gatsby-cli": "^2.11.10",
+    "gatsby-image": "^2.3.4",
+    "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.3.5",
+    "gatsby-plugin-offline": "^3.1.4",
+    "gatsby-plugin-react-helmet": "^3.2.4",
+    "gatsby-plugin-sass": "^2.2.3",
+    "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-plugin-styled-components": "^3.2.3",
+    "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-transformer-sharp": "^2.4.6",
     "i": "^0.3.6",
-    "node-sass": "^4.13.0",
-    "npm": "^6.13.4",
+    "node-sass": "^4.13.1",
+    "npm": "^6.14.4",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "styled-components": "^4.4.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.0.0",
+    "react-lazyload": "^2.6.7",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "prettier": "^2.0.4"
   },
   "engines": {
     "node": ">=12.14.0",
