--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "endOfLine": "lf",
+  "printWidth": 80,
   "semi": false,
-  "singleQuote": false,
   "tabWidth": 2,
   "trailingComma": "es5"
 }
