--- a/package.json
+++ b/package.json
@@ -1,57 +1,50 @@
 {
-  "name": "portfolio-website",
-  "private": true,
+  "name": "portfolio-site",
   "description": "My portfolio website built on React + Gatsby",
-  "version": "0.1.0",
-  "author": "Robert Winterstein <rrwinterstein@gmail.com>",
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.31",
-    "@fortawesome/free-brands-svg-icons": "^5.15.0",
-    "@fortawesome/free-solid-svg-icons": "^5.15.0",
-    "@fortawesome/react-fontawesome": "^0.1.11",
-    "babel-plugin-styled-components": "^1.11.1",
-    "gatsby": "^2.24.67",
-    "gatsby-cli": "^2.15.1",
-    "gatsby-image": "^2.4.20",
-    "gatsby-plugin-google-gtag": "^2.5.0",
-    "gatsby-plugin-manifest": "^2.4.33",
-    "gatsby-plugin-offline": "^3.2.30",
-    "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sass": "^2.3.14",
-    "gatsby-plugin-sharp": "^2.6.38",
-    "gatsby-plugin-styled-components": "^3.3.12",
-    "gatsby-source-filesystem": "^2.3.32",
-    "gatsby-transformer-sharp": "^2.5.16",
-    "i": "^0.3.6",
-    "node-sass": "^4.14.1",
-    "npm": "^6.14.8",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-lazyload": "^3.2.0",
-    "styled-components": "^5.2.0"
-  },
-  "devDependencies": {
-    "prettier": "^2.1.2"
-  },
-  "engines": {
-    "node": ">=12.14.0",
-    "npm": ">=6.13.4"
+  "version": "1.0.0",
+  "author": "Robert Winterstein <rrwinterstein@gmail.com> (https://www.rwinterstein.com)",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rwinterstein/portfolio-site"
   },
   "keywords": [
     "gatsby"
   ],
   "scripts": {
-    "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "start": "npm run develop",
+    "start": "gatsby develop",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "clean": "gatsby clean"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/rwinterstein/portfolio-site"
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "babel-plugin-styled-components": "^1.13.2",
+    "gatsby": "^3.14.0",
+    "gatsby-cli": "^3.14.0",
+    "gatsby-plugin-google-gtag": "^3.14.0",
+    "gatsby-plugin-image": "^1.14.0",
+    "gatsby-plugin-manifest": "^3.14.0",
+    "gatsby-plugin-react-helmet": "^4.14.0",
+    "gatsby-plugin-sass": "^4.14.0",
+    "gatsby-plugin-sharp": "^3.14.0",
+    "gatsby-plugin-styled-components": "^4.14.0",
+    "gatsby-source-filesystem": "^3.14.0",
+    "gatsby-transformer-sharp": "^3.14.0",
+    "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-lazyload": "^3.2.0",
+    "styled-components": "^5.3.1"
+  },
+  "engines": {
+    "node": ">=16.10.0",
+    "npm": ">=7.24.0"
   }
 }
